# btl_oop_backend

./: .env.example  .gitignore  Makefile  QUICKSTART.CICD.md  QUICKSTART.admin.md  README.CICD.md  README.admin.md  README.backend.md  README.production.md  docker-compose.dev.yml  docker-compose.infer.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 086bee01a3a3_add_verrifed_attribute_for_user.py  3e3c7d380b7d_add_user_name_to_user.py  b68520be6e53_change_password_storage_size.py  bf9ced46edd9_init_migrate.py
backend/docs/: api.md  architecture.md  authentication.md  index.md
backend/scripts/: compress_resources_file.py  create_admin.py  demo_extractor.py  load_recipe_to_db.py  load_recipe_to_vector_store.py  search_recipe_similarity.py  seed_admin.py
backend/src/: main.py
backend/src/ai/chains/: completion.py  rag.py  reranker.py
backend/src/ai/embeddings/: __init__.py  generate_embedding.py  qdrant_store.py  rate_limiter.py  search.py  token_calculator.py
backend/src/ai/llm/: instruction.py  prompt_extractor.py  prompt_router.py
backend/src/api/v1/: admin.py  ai.py  auth.py  main.py  recipe.py
backend/src/core/: __init__.py  security.py  template.py  verification.py
backend/src/core/database/: database.py
backend/src/core/database/models/: __init__.py  history.py  ingredient.py  pantry.py  recipe.py  step.py  user.py
backend/src/core/decorator/: timer.py
backend/src/core/redis/: provider.py
backend/src/core/services/: email.py
backend/src/core/utils/: santitize.py
backend/src/domains/admin/use_cases/: __init__.py  create_user.py
backend/src/domains/auth/use_cases/: __init__.py  helpers.py  login_by_username.py  login_user.py  register_user.py
backend/src/domains/recipe/: __init__.py
backend/src/domains/recipe/use_cases/: helpers.py  (+3 more)
backend/src/schemas/: recipe.py  user.py
backend/src/schemas/workers/: send_mail.py
backend/src/settings/: env.py
backend/src/workers/: helpers.py  send_mail.py
backend/tests/: test_main.py
inference/: Dockerfile  Dockerfile.dev  README.md  main.py  process.yml  pyproject.toml
(+34 files in other folders)
