[project]
name = "btl-oop-be"
version = "0.1.0"
description = "Backend for BTL OOP project"
authors = [{ name = "Bùi An Du", email = "dubuicp123@gmail.com" }]
lisense = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "qdrant-client",
    "psycopg[binary]",
    "asyncpg",
    "redis>=6.0.0",
    "python-multipart",
    "mkdocs",
    "mkdocs-material",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "arq",
    "fastcrud",
    "jinja2",
    "alembic",
    "sqlmodel",
    "pydantic-settings",
    "email-validator",
    "argon2-cffi>=23.0.0",
    "pyjwt",
    "tenacity",
    "emails",
    "httpx",
    "sentry-sdk[fastapi]",
    "hatchling>=1.27.0",
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "scalar-fastapi>=1.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.mypy]
exclude = ["venv", ".venv", "alembic"]
python_version = 3.13
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true
